--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "LinkedIn Connection Auto-Increase",
-  "version": "2.6",
+  "version": "2.7",
   "description": "Automatically sends connection requests to LinkedIn users.",
   "permissions": [
     "activeTab",
@@ -17,8 +17,12 @@
   },
   "content_scripts": [
     {
-      "matches": ["https://www.linkedin.com/*"],
-      "js": ["content.js"]
+      "matches": [
+        "https://www.linkedin.com/*"
+      ],
+      "js": [
+        "content.js"
+      ]
     }
   ]
 }
